--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <header class="header">
         <div class="container header__container">
             <a class="logo header__logo" href="./index.html"><span class="logo__web">Web</span>Studio</a>
+            <button class="menu-btn js-open-menu" aria-expanded="false" aria-controls="mobile-menu" type="button">
+                <svg class="menu-btn__icon" width="24" height="16">
+                    <use href="./images/icons.svg#menu"></use>
+                </svg>
+            </button>
             <nav class="nav header__nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a class="nav__link nav__link--current" href="./index.html">Студия</a></li>
@@ -30,7 +35,7 @@
             <div class="contacts header__contacts">
                 <ul class="contacts__list">
                     <li class="contacts__item">
-                        <a class="contacts__link" href="mailto:info@devstudio.com">
+                        <a class="contacts__link contacts__link" href="mailto:info@devstudio.com">
                             <svg class="contacts__icon contacts__icon--start" width="16" height="12">
                                 <use href="./images/icons.svg#envelope"></use>
                             </svg>
@@ -38,7 +43,7 @@
                         </a>
                     </li>
                     <li class="contacts__item">
-                        <a class="contacts__link" href="tel:+380961111111">
+                        <a class="contacts__link contacts__link" href="tel:+380961111111">
                             <svg class="contacts__icon contacts__icon--start" width="10" height="16">
                                 <use href="./images/icons.svg#smartphone"></use>
                             </svg>
@@ -63,7 +68,7 @@
             <div class="container ">
                 <h2 class="section__title section__title--visually-hidden">Преимущества</h2>
                 <ul class="grid">
-                    <li class="grid__item grid__item--col-4">
+                    <li class="grid__item grid__item--features">
                         <div class="feature">
                             <div class="feature__icon-box">
                                 <svg  width="70" height="70">
@@ -74,7 +79,7 @@
                             <p class="feature__desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-4">
+                    <li class="grid__item grid__item--features">
                         <div class="feature">
                             <div class="feature__icon-box">
                                 <svg width="70" height="70">
@@ -85,7 +90,7 @@
                             <p class="feature__desc">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-4">
+                    <li class="grid__item grid__item--features">
                         <div class="feature">
                             <div class="feature__icon-box">
                                 <svg width="70" height="70">
@@ -96,7 +101,7 @@
                             <p class="feature__desc">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-4">
+                    <li class="grid__item grid__item--features">
                         <div class="feature">
                             <div class="feature__icon-box">
                                 <svg width="70" height="70">
@@ -115,19 +120,19 @@
             <div class="container">
                 <h2 class="section__title">Чем мы занимаемся</h2>
                 <ul class="grid">
-                    <li class="grid__item grid__item--col-3">
+                    <li class="grid__item grid__item--services">
                         <div class="services">
                             <img class="services__image" src="./images/index/img1.jpg" alt="компьютер" width="370">
                             <h3 class="services__title">Десктопные приложения</h3>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-3">
+                    <li class="grid__item grid__item--services">
                         <div class="services">
                             <img class="services__image" src="./images/index/img2.jpg" alt="телефон" width="370">
                             <h3 class="services__title">Мобильные приложения</h3>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-3">
+                    <li class="grid__item grid__item--services">
                         <div class="services">
                             <img class="services__image" src="./images/index/img3.jpg" alt="планшет" width="370">
                             <h3 class="services__title">Дизайнерские решения</h3>
@@ -141,7 +146,7 @@
             <div class="container">
                 <h2 class="section__title">Наша команда</h2>
                 <ul class="grid">
-                    <li class="grid__item grid__item--col-4">
+                    <li class="grid__item grid__item--team">
                         <div class="team-card">
                             <img class="team-card__image" src="./images/index/img4.jpg" alt="Игорь Демьяненко" width="270">
                             <div class="team-card__desc">
@@ -182,7 +187,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-4">
+                    <li class="grid__item grid__item--team">
                         <div class="team-card">
                             <img class="team-card__image" src="./images/index/img5.jpg" alt="Ольга Репина" width="270">
                             <div class="team-card__desc">
@@ -223,7 +228,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-4">
+                    <li class="grid__item grid__item--team">
                         <div class="team-card">
                             <img class="team-card__image" src="./images/index/img6.jpg" alt="Николай Тарасов" width="270">
                             <div class="team-card__desc">
@@ -264,7 +269,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-4">
+                    <li class="grid__item grid__item--team">
                         <div class="team-card">
                             <img class="team-card__image" src="./images/index/img7.jpg" alt="Михаил Ермаков" width="270">
                             <div class="team-card__desc">
@@ -313,7 +318,7 @@
             <div class="container">
                 <h2 class="section__title">Постоянные клиенты</h2>
                 <ul class="grid">
-                    <li class="grid__item grid__item--col-6">
+                    <li class="grid__item grid__item--customers">
                         <div class="customers">
                             <a class="customers__link" href="">
                                 <svg class="customers__icon" width="106" height="60">
@@ -322,7 +327,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-6">
+                    <li class="grid__item grid__item--customers">
                         <div class="customers">
                             <a class="customers__link" href="">
                                 <svg class="customers__icon" width="106" height="60">
@@ -331,7 +336,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-6">
+                    <li class="grid__item grid__item--customers">
                         <div class="customers">
                             <a class="customers__link" href="">
                                 <svg class="customers__icon" width="106" height="60">
@@ -340,7 +345,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-6">
+                    <li class="grid__item grid__item--customers">
                         <div class="customers">
                             <a class="customers__link" href="">
                                 <svg class="customers__icon" width="106" height="60">
@@ -349,7 +354,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-6">
+                    <li class="grid__item grid__item--customers">
                         <div class="customers">
                             <a class="customers__link" href="">
                                 <svg class="customers__icon" width="106" height="60">
@@ -358,7 +363,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="grid__item grid__item--col-6">
+                    <li class="grid__item grid__item--customers">
                         <div class="customers">
                             <a class="customers__link" href="">
                                 <svg class="customers__icon" width="106" height="60">
@@ -376,7 +381,7 @@
         <div class="container footer__container">
             <div>
                 <a class="logo footer__logo" href="./index.html"><span class="logo__web">Web</span>Studio</a>
-                <address class="address">
+                <address class="address footer__address">
                     <ul class="address__list">
                         <li class="address__item">г. Киев, пр-т Леси Украинки, 26</li>
                         <li class="address__item"><a class="address__link" href="mailto:info@example.com">info@example.com</a></li>
@@ -433,6 +438,54 @@
             </div>
         </div>
     </footer>
+<!-- Мобильное меню -->
+    <div class="mobile-menu js-menu-container" id="mobile-menu">
+        <div class="mobile-menu__container">
+            <button class="menu-btn menu-btn--close js-close-menu" type="button">
+                <svg class="menu-btn__icon" width="19" height="19">
+                    <use href="./images/icons.svg#menu-close"></use>
+                </svg>
+            </button>
+            <nav class="mobile-nav mobile-menu__mobile-nav">
+                <ul class="mobile-nav__list">
+                    <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--current"
+                            href="./index.html">Студия</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="mobile-contacts mobile-menu__mobile-contacts">
+                <ul class="mobile-contacts__list">
+                    <li class="mobile-contacts__item">
+                        <a class="mobile-contacts__link mobile-contacts__link--accent" href="tel:+380961111111">
+                            +38 096 111 11 11
+                        </a>
+                    </li>
+                    <li class="mobile-contacts__item">
+                        <a class="mobile-contacts__link mobile-contacts__link" href="mailto:info@devstudio.com">
+                            info@devstudio.com
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="mobile-socials mobile-menu__mobile-socials">
+                <ul class="mobile-socials__list">
+                    <li class="mobile-socials__item">
+                        <a class="mobile-socials__link" href="">Instgram</a>
+                    </li>
+                    <li class="mobile-socials__item">
+                        <a class="mobile-socials__link" href="">Twitter</a>
+                    </li>
+                    <li class="mobile-socials__item">
+                        <a class="mobile-socials__link" href="">Facebook</a>
+                    </li>
+                    <li class="mobile-socials__item">
+                        <a class="mobile-socials__link" href="">Linkedin</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 <!-- Модальное окно -->
     <div class="backdrop backdrop--is-hidden" data-modal>
         <div class="modal">
@@ -488,6 +541,11 @@
             </form>
         </div>
     </div>
+
     <script src="./js/modal.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="./js/mobile-menu.js"></script>
 </body>
 </html>
